deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infraui
spec:
  replicas: 5
  selector:
    matchLabels:
      app: infraui
  template:
    metadata:
      labels:
        app: infraui
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname # Use the hostname label
                    operator: In
                    values:
                      - trahkube1
                      - trahkube2
                      - trahkube3
                      - trahkube4
                      - trahk3worker1
      containers:
        - name: infraui
          image: docker.io/jtrahan88/infraui:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: dockercred
